MODSHSLIDE-170 #resolve #comment Modified extra containers to allow above/below outside positioning without wrapping navs

--- a/code/media/mod_jsshackslides/css/jsshackslides.css
+++ b/code/media/mod_jsshackslides/css/jsshackslides.css
@@ -6,6 +6,7 @@
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
+	overflow: hidden;
 }
 .jss-slider .owl-carousel .jss-image .jss-image-int {
 	background-repeat: no-repeat;
